# AdventOfCode2025

./: README.md  lint.sh  pyproject.toml
.nova/: Configuration.json
inputs/: .gitignore
src/: main.py
src/AdventOfCode2025.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/lib/: direction.py  grid2d.py  point2d.py  point3d.py  types.py
src/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py
